packages/style-stencila/src/objects/executableToolbar.css
:host,
stencila-executable-document-toolbar {
  /** @prop --background: Sets the background color of the component. */
  --background: var(--color-neutral-300);

  @apply block;

  &[position='fixed'] {
    @apply fixed top-0 left-0 z-30 w-full;
    max-width: none !important;

    & + * {
      @apply mt-12;
    }
  }

  .executableDocumentStatus {
    @apply text-sm leading-none text-key;

    &.success {
      @apply text-success-700;
    }

    &.danger {
      @apply text-danger-500;
    }

    stencila-icon {
      @apply mr-1;
    }

    stencila-tooltip {
      cursor: help;
    }
  }
}

